# rust-bot-bundle

./: .gitignore  .gitmodules  README.md
rust-bot/: Cargo.toml
rust-bot-plugin/: Cargo.toml  build.sh
rust-bot-plugin/src/: lib.rs
rust-bot-plugin/src/plugin/interface/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/chain_registry/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/dummy/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/fraud_detection/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/params/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/proposals/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/proposals/api/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/proposals/fetch/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/proposals/update/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/tally_results/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/governance/validators/: mod.rs
rust-bot-plugin/src/plugin/interface/agent/staking/pool/: mod.rs
rust-bot-plugin/src/plugin/store/: mod.rs
rust-bot-plugin/src/plugin/store/fallback_entry_store/: mod.rs
rust-bot-plugin/src/plugin/store/sled_store/: mod.rs
rust-bot-plugin/templates/: governance_proposal_template.html
rust-bot/src/: main.rs
