[package]
name = "rust-bot-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_bot_plugin"
crate-type = ["cdylib"]

[features]
default = ["EnvLogger","ChainRegistry","Params","TallyResults","Pool","FraudDetection","Validators","GovernanceProposalFetch","GovernanceProposalView","Dummy"]
EnvLogger = []
ChainRegistry = []
Params = []
TallyResults = []
Pool = []
FraudDetection = []
Validators = []
GovernanceProposalFetch = []
GovernanceProposalView = []
Dummy = []

[dependencies]
sled = "0.34.7"
lazy_static = "1.4.0"
anyhow = "1.0.71"

log = "0.4.19"
env_logger = "0.10.0"

serde = {version = "1.0.166" , features = ["derive"] }
serde_derive = "1.0.166"
serde_json = "1.0.99"

bincode = "1.3.3"

chrono = "0.4.26"

cosmos-rust-package = { git = 'https://github.com/Philipp-Sc/cosmos-rust-package.git' }
tokio = { version = "1.29.1",features = ["rt","rt-multi-thread","time","sync"] }
tokio-util = { version = "0.7.8",features = ["time"] }

rand = "0.8.5"

rust-bert-fraud-detection-socket-ipc = { git = 'https://github.com/Philipp-Sc/rust-bert-fraud-detection.git' }
minify-html = "0.11.1"


csv = "1.2.2"
askama = "0.12.0"

tonic = "0.9.2"

strum = "0.25.0"

[profile.release]
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true

# codegen-units of 1 gives best optimization, but disables parallel building.
# Default: 16
codegen-units = 1

# The default optimization level is 3 for release mode builds.
# 0 means disable optimization and is the default for debug mode buids.
# (Setting opt-level=1 for debug builds is a good way of speeding them up a bit.)
# "s" means optimize for size, "z" reduces size even more.
opt-level = 3


[build]
rustflags = ["--cfg", "tokio_unstable"] # export RUSTFLAGS="--cfg tokio_unstable"
